Fixed formatting issues, some content updates

--- a/styles/help.css
+++ b/styles/help.css
@@ -105,8 +105,13 @@ ol li {
 	margin-bottom: 2em;
 }
 
+ol li p {
+	font-weight: normal;
+}
+
 ol li * {
 	color: #454545;
+    font-weight: normal;
 	}
 
 ol li ol li {
